kubernetes/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: crm-supermercado
---
apiVersion: v1
kind: Namespace
metadata:
  name: crm-monitoring
